# ComparatorYAMLVicky

./: README.md  pyproject.toml
script/: comparator.py  config.py  translator.py
